--- a/Exercises/E-2.html
+++ b/Exercises/E-2.html
@@ -1,87 +1,122 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Buttons</title>
     <style>
-        .uber {
-            height: 36px;
-            width: 115px;
-            background-color: black;
-            color: white;
-            cursor: pointer;
-            margin-right: 8px;
-        }
-        .amazon {
-            height: 36px;
-            width: 150px;
-            border-radius: 18px;
-            border: none;
-            background-color: rgb(255,216,20);
-            color: black;
-            cursor: pointer;
-            margin-right: 8px;
-        }
-        .github {
-            height: 36px;
-            width: 75px;
-            border-radius: 4px;
-            border: none;
-            background-color: rgb(46,164,79);
-            color:white;
-            cursor: pointer;
-            margin-right: 8px;
-        }
-        .bootstrap-1 {
-            height: 36px;
-            width: 110px;
-            border-radius: 3px;
-            border: none;
-            background-color: rgb(121,82,179);
-            color:white;
-            cursor: pointer;
-            margin-right: 8px;
-        }
-        .bootstrap-2 {
-            height: 36px;
-            width: 110px;
-            border-radius: 3px;
-            border: 1px;
-            border-style: solid;
-            background-color: white;
-            color:rgb(108,117,125);
-            cursor: pointer;
-            margin-right: 8px;
-        }
-        .linkedin-1 {
-            height: 36px;
-            width: 220px;
-            border-radius: 18px;
-            border: 1px;
-            border-style: solid;
-            background-color: rgb(10, 102, 194);
-            color:white;
-            cursor: pointer;
-            margin-right: 8px;
-            font-weight: bold;
-        }
-        .linkedin-2 {
-            height: 36px;
-            width: 85px;
-            border-radius: 18px;
-            background-color: white;
-            border: 1px;
-            border-style: solid;
-            border-color: rgb(10, 102, 194);
-            color:rgb(10, 102, 194);
-            cursor: pointer;
-            margin-right: 8px;
-            font-weight: bold;
-        }
+      .uber {
+        height: 36px;
+        width: 115px;
+        background-color: black;
+        color: white;
+        cursor: pointer;
+        margin-right: 8px;
+      }
+      .uber:hover {
+        opacity: 0.8;
+      }
+
+      .amazon {
+        height: 36px;
+        width: 150px;
+        border-radius: 18px;
+        border: none;
+        background-color: rgb(255, 216, 20);
+        color: black;
+        cursor: pointer;
+        margin-right: 8px;
+        transition: background-color 0.15s;
+      }
+      .amazon:hover {
+        background-color: rgb(231, 195, 12);
+      }
+
+      .github {
+        height: 36px;
+        width: 75px;
+        border-radius: 4px;
+        border: none;
+        background-color: rgb(46, 164, 79);
+        color: white;
+        cursor: pointer;
+        margin-right: 8px;
+        transition: box-shadow 0.15s;
+      }
+      .github:hover {
+        box-shadow: 0px 5px 10px rgb(192, 172, 172);
+      }
+
+      .bootstrap-1 {
+        height: 36px;
+        width: 110px;
+        border-radius: 3px;
+        border: none;
+        background-color: rgb(121, 82, 179);
+        color: white;
+        cursor: pointer;
+        margin-right: 8px;
+        transition: background-color 0.15s;
+      }
+      .bootstrap-1:hover {
+        background-color: rgb(99, 64, 151);
+      }
+
+      .bootstrap-2 {
+        height: 36px;
+        width: 110px;
+        border-radius: 3px;
+        border: 1px;
+        border-style: solid;
+        background-color: white;
+        color: rgb(108, 117, 125);
+        cursor: pointer;
+        margin-right: 8px;
+        transition: background-color 0.15s, color 0.15s;
+      }
+      .bootstrap-2:hover {
+        color: white;
+        background-color: rgb(108, 117, 125);
+      }
+
+      .linkedin-1 {
+        height: 36px;
+        width: 220px;
+        border-radius: 18px;
+        border: 1px;
+        border-style: solid;
+        background-color: rgb(10, 102, 194);
+        color: white;
+        cursor: pointer;
+        margin-right: 8px;
+        font-weight: bold;
+        transition: background-color 0.15s;
+      }
+      .linkedin-1:hover {
+        background-color: rgb(12, 71, 130);
+      }
+
+      .linkedin-2 {
+        height: 36px;
+        width: 85px;
+        border-radius: 18px;
+        background-color: white;
+        border: 1px;
+        border-style: solid;
+        border-color: rgb(10, 102, 194);
+        color: rgb(10, 102, 194);
+        cursor: pointer;
+        margin-right: 8px;
+        font-weight: bold;
+        transition: background-color 0.15s;
+      }
+      .linkedin-2:hover {
+        border-width: 3px;
+        background-color: rgb(199, 218, 238);
+      }
     </style>
-</head>
-<body>
+  </head>
+  <body>
     <p>Uber</p>
     <button class="uber">Request now</button>
     <p>Amazon</p>
@@ -94,5 +129,5 @@
     <p>LinkedIn</p>
     <button class="linkedin-1">Apply on company website</button>
     <button class="linkedin-2">Save</button>
-</body>
+  </body>
 </html>
