--- a/Exercises/buttons.html
+++ b/Exercises/buttons.html
@@ -4,75 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Buttons</title>
-    <style>
-      .subscribe {
-        background-color: rgb(200, 0, 0);
-        border: none;
-        color: white;
-        height: 36px;
-        cursor: pointer;
-        padding-top: 10px;
-        padding-bottom: 10px;
-        padding-left: 16px;
-        padding-right: 16px;
-        border-radius: 2px;
-        margin-right: 8px;
-        margin-left: 10px;
-        transition: opacity 0.15s;
-        vertical-align: top;
-      }
-
-      .subscribe:hover {
-        opacity: 0.8;
-      }
-
-      .subscribe:active {
-        opacity: 0.5;
-      }
-
-      .join {
-        background-color: white;
-        border-color: rgb(41, 118, 211);
-        border-style: solid;
-        color: rgb(41, 118, 211);
-        height: 36px;
-        cursor: pointer;
-        padding: 10px 10px 10px 10px;
-        border-width: 1px;
-        border-radius: 2px;
-        margin-right: 8px;
-        transition: background-color 0.15s, color 0.15s;
-      }
-
-      .join:hover {
-        background-color: rgb(41, 118, 211);
-        color: white;
-      }
-
-      .join:active {
-        opacity: 0.7;
-      }
-
-      .tweet {
-        background-color: rgb(2, 158, 255);
-        color: white;
-        border: none;
-        height: 36px;
-        width: 74px;
-        border-radius: 18px;
-        font-weight: bold;
-        font-size: 15px;
-        cursor: pointer;
-        margin-right: 8px;
-        transition: box-shadow 0.15s;
-        padding: 10px 10px 10px 10px;
-        vertical-align: top;
-      }
-
-      .tweet:hover {
-        box-shadow: 5px 5px 10px rgb(0, 0, 0, 0.15);
-      }
-    </style>
+    <link rel="stylesheet" href="styles/buttons.css" />
   </head>
   <body>
     <button class="subscribe">SUBSCRIBE</button>
