--- a/Exercises/text.html
+++ b/Exercises/text.html
@@ -1,69 +1,33 @@
-<style>
-  p {
-    font-family: Arial, Helvetica, sans-serif;
-    margin-top: 0;
-    margin-bottom: 0;
-  }
-  .video-title {
-    font-size: 18px;
-    font-weight: bold;
-    width: 300px;
-    line-height: 26px;
-    margin-bottom: 5px;
-  }
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Document</title>
+    <link rel="stylesheet" href="styles/text.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,700;1,600&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+      rel="stylesheet"
+    />
+  </head>
+  <body>
+    <p class="video-title">Hello world! I am learning full stack development</p>
+    <p class="video-stats">3.4M views &#183; 6 months ago</p>
 
-  .video-stats {
-    font-size: 14px;
-    color: gray;
-    margin-bottom: 20px;
-  }
+    <p class="video-author">Vadivelu vibes &#10003;</p>
 
-  .video-author {
-    font-size: 14px;
-    color: gray;
-    margin-bottom: 20px;
-  }
+    <p class="video-description">
+      Lorem Ipsum is simply dummy text of the printing and typesetting industry.
+      Lorem Ipsum has been the industry's standard dummy text ever since the
+      1500s, when an unknown printer took a galley of type and scrambled it to
+      make a type specimen book. It has survived not only five centuries.
+    </p>
 
-  .video-description {
-    font-size: 14px;
-    color: gray;
-    width: 300px;
-    line-height: 22px;
-    margin-bottom: 100px;
-  }
-
-  .apple-text {
-    margin-bottom: 50px;
-    font-size: 14px;
-    background-color: red;
-    color: white;
-    text-align: center;
-    padding-top: 18px;
-    padding-bottom: 18px;
-  }
-
-  .span-example {
-    cursor: pointer;
-  }
-
-  .span-example:hover {
-    text-decoration: underline;
-  }
-</style>
-
-<p class="video-title">Hello world! I am learning full stack development</p>
-<p class="video-stats">3.4M views &#183; 6 months ago</p>
-
-<p class="video-author">Vadivelu vibes &#10003;</p>
-
-<p class="video-description">
-  Lorem Ipsum is simply dummy text of the printing and typesetting industry.
-  Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,
-  when an unknown printer took a galley of type and scrambled it to make a type
-  specimen book. It has survived not only five centuries.
-</p>
-
-<p class="apple-text">
-  Shop early for the best selection of holiday.
-  <span class="span-example">Shop now &#62;</span>
-</p>
+    <p class="apple-text">
+      Shop early for the best selection of holiday.
+      <span class="span-example">Shop now &#62;</span>
+    </p>
+  </body>
+</html>
