--- a/YouTube.html
+++ b/YouTube.html
@@ -4,8 +4,104 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>YouTube.com Clone</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+      rel="stylesheet"
+    />
+    <style>
+      p {
+        font-family: Roboto, Arial, Helvetica, sans-serif;
+        margin-top: 0;
+        margin-bottom: 0;
+      }
+      .thumbnail {
+        display: block;
+        width: 300px;
+      }
+      .video-title {
+        margin-top: 0;
+        font-size: 14px;
+        font-weight: 500;
+        line-height: 20px;
+        margin-bottom: 12px;
+      }
+      .video-preview {
+        width: 300px;
+        display: inline-block;
+        vertical-align: top;
+        margin-right: 15px;
+      }
+
+      .search-bar {
+        display: block;
+      }
+
+      .channel-picture {
+        display: inline-block;
+        width: 50px;
+        vertical-align: top;
+      }
+      .video-info {
+        display: inline-block;
+        width: 245px;
+      }
+
+      .video-author,
+      .video-stats {
+        font-size: 12px;
+        color: rgb(96, 96, 96);
+      }
+
+      .video-author {
+        margin-bottom: 4px;
+      }
+
+      .profile-picture {
+        width: 40px;
+        border-radius: 50px;
+      }
+      .thumbnail-row {
+        margin-bottom: 12px;
+      }
+    </style>
   </head>
   <body>
-    <img src="Thumbnails/thumbnail-1.webp" />
+    <input class="search-bar" type="text" placeholder="Search" />
+
+    <div class="video-preview">
+      <div class="thumbnail-row">
+        <img class="thumbnail" src="Thumbnails/thumbnail-1.webp" />
+      </div>
+      <div>
+        <div class="channel-picture">
+          <img class="profile-picture" src="Channel-pictures/channel-1.jpeg" />
+        </div>
+        <div class="video-info">
+          <p class="video-title">
+            Talking Tech and AI with Google CEO Sundar Pichai!
+          </p>
+          <p class="video-author">Marques Brownlee</p>
+          <p class="video-stats">3.4M views · 6 months ago</p>
+        </div>
+      </div>
+    </div>
+
+    <div class="video-preview">
+      <div class="thumbnail-row">
+        <img class="thumbnail" src="Thumbnails/thumbnail-2.webp" />
+      </div>
+      <div>
+        <div class="channel-picture">
+          <img class="profile-picture" src="Channel-pictures/channel-2.jpeg" />
+        </div>
+        <div class="video-info">
+          <p class="video-title">Try Not To Laugh Challenge #9</p>
+          <p class="video-author">Markiplier</p>
+          <p class="video-stats">19M views · 4 years ago</p>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
